add initial migration

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "ServerConnection": "Server=localhost;Database=M3P1;Trusted_Connection=True;persist security info=True;"
     }
   }
 }
