--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-
+  "TokenSettings": {
+    "Issuer": "DEVinCar",
+    "Audience": "API",
+    "Key": "7f9bec68-a0ac-4be4-9162-a0aeee2f9c2e"
+  },
   "ConnectionStrings": {
     "ServerConnection": "Server=localhost;Database=M3P1;Trusted_Connection=True;persist security info=True;"
   }
